--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Config Docker
-      run: "echo \"{ 'features': { 'containerd-snapshotter': true  } }\" | sudo tee /etc/docker/daemon.json"
+      run: |
+        echo "{ 'features': { 'containerd-snapshotter': true  } }" | sudo tee /etc/docker/daemon.json
+        sudo systemctl restart docker
+
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
