--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential gcc-aarch64-linux-gnu
+        sudo apt-get install -y build-essential gcc-aarch64-linux-gnu lftp
 
     - uses: actions/setup-go@v5
       with:
