--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,4 +53,5 @@ jobs:
         mput ./*
         put ../scripts/install-agent.sh -o install-agent.sh
         put ../scripts/install-hub.sh -o install-hub.sh
+        chmod -R 644 /var/www/execli/*
         EOF
